bad/bin_op_ne_void_void.example_compiler_output
ERROR
[1mbad/bin_op_ne_void_void.lat:4:8: [1;31merror: [0;1moperator != cannot compare values of types `void` and `void` because values are not convertible to either of the two types[m
	foo() != foo();
	      [1;32m^[m
